--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Trung Hau",
@@ -18,6 +19,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.28.0",
     "globals": "^15.9.0",
+    "nodemon": "^3.1.6",
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.6.0"
   }
